[package]
name = "ibc-relayer-cosmos-mock"
version = { workspace = true }
edition = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.72"
description  = """
    TBD
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait         = { workspace = true }
basecoin-app        = { workspace = true }
basecoin-store      = { workspace = true }
ibc                 = { workspace = true, features = ["mocks"] }
ibc-proto           = { workspace = true }
cgp-core            = { workspace = true }
ibc-relayer-components          = { workspace = true }
ibc-relayer-components-extra    = { workspace = true }
ibc-relayer-runtime             = { workspace = true }
ibc-relayer-types               = { workspace = true }
ibc-cosmos-client-components    = { workspace = true }
tendermint                      = { workspace = true, features = ["rust-crypto"] }
tendermint-testgen              =  { workspace = true }
prost       = { workspace = true }
tokio       = { workspace = true, features = ["full"] }
tracing     = { workspace = true }
serde_json  = { workspace = true }

primitive-types     = { version = "0.12.0", default-features = false}
tower               = { version = "0.4", features = ["full"] }
