[package]
name         = "ibc-relayer-cosmos"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
ibc-proto           = { workspace = true }
ibc-relayer         = { workspace = true }
ibc-relayer-types   = { workspace = true }
ibc-telemetry       = { workspace = true }
cgp-core            = { workspace = true }
ibc-relayer-runtime = { workspace = true }
ibc-relayer-components          = { workspace = true }
ibc-relayer-components-extra    = { workspace = true }
ibc-relayer-subscription        = { workspace = true }
ibc-test-components             = { workspace = true }
cosmos-client-components        = { workspace = true }
cosmos-test-components          = { workspace = true }
tendermint      = { workspace = true, features = ["secp256k1"] }
tendermint-rpc  = { workspace = true, features = ["http-client", "websocket-client"] }

async-trait     = { workspace = true }
eyre            = { workspace = true }
flex-error      = { workspace = true }
prost           = { workspace = true }
tracing         = { workspace = true }
tokio           = { workspace = true }
tonic           = { workspace = true, features = ["tls", "tls-roots"] }
serde           = { workspace = true }
serde_derive    = { workspace = true }
itertools       = { workspace = true }
futures         = { workspace = true }
http            = { workspace = true }
serde_json      = { workspace = true }
toml            = { workspace = true }

opentelemetry   = { version = "0.17.0", features = ["metrics"] }
moka            = { version = "0.11", features = ["future"] }
