[package]
name = "ibc-relayer-mock"
version = "0.1.0"
edition = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.72"
description  = """
    TBD
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
eyre = "0.6.8"
flex-error = "0.4.4"
cgp-core = { version = "0.1.0" }
ibc-relayer-components = { version = "0.1.0" }
ibc-relayer-runtime = { version = "0.1.0" }
ibc-cosmos-client-components = { version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.36"
