[package]
name         = "ibc-relayer-runtime"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
ibc-relayer-components          = { workspace = true }
ibc-relayer-components-extra    = { workspace = true }
ibc-relayer-subscription        = { workspace = true }
ibc-test-components             = { workspace = true }

async-trait = { workspace = true }
cgp-core    = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
futures     = { workspace = true }

tokio-stream    = "0.1"
