[package]
name         = "ibc-relayer-subscription"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
ibc-relayer-components          = { workspace = true }
ibc-relayer-components-extra    = { workspace = true }
cgp-core    = { workspace = true }
async-trait = { workspace = true }

futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }