[package]
name         = "tokio-runtime-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Modular runtime components implemented using Tokio
"""

[dependencies]
ibc-relayer-components          = { workspace = true }
ibc-relayer-components-extra    = { workspace = true }
ibc-test-components             = { workspace = true }

cgp-core    = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
