[package]
name         = "ibc-integration-test"
version      = "0.25.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
homepage     = "https://hermes.informal.systems/"
repository   = "https://github.com/informalsystems/hermes"
authors      = ["Informal Systems <hello@informal.systems>"]
description  = "Integration tests for Hermes"
rust-version = "1.72"
publish      = false

[dependencies]
cgp-core           = { version = "0.1.0" }
ibc-relayer-types  = { version = "0.25.0" }
ibc-relayer        = { version = "0.25.0" }
ibc-relayer-all-in-one = { path = "../../crates/relayer-all-in-one" }
ibc-relayer-components = { version = "0.1.0", path = "../../crates/relayer-components" }
ibc-relayer-components-extra = { version = "0.1.0", path = "../../crates/relayer-components-extra" }
ibc-relayer-runtime    = { path = "../../crates/relayer-runtime" }
ibc-relayer-cosmos     = { path = "../../crates/relayer-cosmos" }
ibc-relayer-solomachine     = { path = "../../crates/relayer-solomachine" }
ibc-test-framework = { path = "../test-framework" }

http = "0.2.9"
prost = { version = "0.11" }
serde_json = "1"
time = "0.3"
tokio = { version = "1.32", features = ["rt"] }
toml = "0.7"
tonic = { version = "0.9", features = ["tls", "tls-roots"] }
serde = "1.0.166"

[features]
default = []
solomachine = []
