[package]
name         = "ibc-integration-test"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = "Integration tests for Hermes"
publish      = false

[dependencies]
cgp-core           = { workspace = true }
ibc-relayer-types  = { workspace = true }
ibc-relayer        = { workspace = true }
hermes-relayer-components          = { workspace = true }
hermes-relayer-components-extra    = { workspace = true }
cosmos-client-components        = { workspace = true }
ibc-relayer-runtime         = { workspace = true }
ibc-relayer-cosmos          = { workspace = true }
ibc-relayer-solomachine     = { workspace = true }
ibc-test-framework          = { path = "../test-framework" }

http        = { workspace = true }
prost       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["rt"] }
time = "0.3"
toml = "0.7"

[features]
default = []
solomachine = []
