[package]
name         = "ibc-integration-test"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = "Integration tests for Hermes"
publish      = false

[dependencies]
cgp                                 = { workspace = true }
ibc-relayer-types                   = { workspace = true }
ibc-relayer                         = { workspace = true }
hermes-relayer-components           = { workspace = true }
hermes-relayer-components-extra     = { workspace = true }
hermes-error                        = { workspace = true }
hermes-runtime                      = { workspace = true }
hermes-cosmos-relayer               = { workspace = true }
hermes-cosmos-chain-components      = { workspace = true }
hermes-solomachine-relayer          = { workspace = true }
ibc-test-framework                  = { path = "../test-framework" }

http        = { workspace = true }
prost       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["rt"] }
time = "0.3"
toml = "0.8"

[features]
default = []
solomachine = []
