[package]
name       = "ibc-test-framework"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme      = "README.md"
description = """
  Framework for writing integration tests for IBC relayers
"""

[dependencies]
cgp-core                    = { workspace = true }
hermes-runtime-components   = { workspace = true }
hermes-relayer-components   = { workspace = true }
hermes-cosmos-relayer       = { workspace = true }

ibc-relayer-types           = { workspace = true }
ibc-relayer                 = { workspace = true }
ibc-proto                   = { workspace = true, features = ["serde"] }
tendermint-rpc              = { workspace = true, features = ["http-client", "websocket-client"] }

http        = { workspace = true }
tokio       = { workspace = true, features = ["full"] }
tracing     = { workspace = true }
eyre        = { workspace = true }
flex-error  = { workspace = true }
itertools   = { workspace = true }
prost       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tonic       = { workspace = true, features = ["tls", "tls-roots"] }

color-eyre          = "0.6"
cfg-if              = "1.0.0"
rand                = "0.8.5"
hex                 = "0.4.3"
serde_yaml          = "0.9.34"
toml                = "0.8"
subtle-encoding     = "0.5.1"
sha2                = "0.10.6"
crossbeam-channel   = "0.5.11"
semver              = "1.0.23"
tracing-subscriber  = { version = "0.3.17", features = [ "env-filter" ] }
hdpath              = "0.6.3"
once_cell           = "1.18.0"
