[package]
name         = "hermes-celestia-client-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Context-generic client components for communicating with a Celestia full node and bridge
"""

[dependencies]
ibc-relayer                         = { workspace = true }
ibc-relayer-types                   = { workspace = true }
cgp                                 = { workspace = true }
hermes-runtime                      = { workspace = true }
hermes-relayer-components           = { workspace = true }
