[package]
name         = "hermes-celestia-test-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
ibc-relayer                         = { workspace = true }
ibc-relayer-types                   = { workspace = true }
cgp-core                            = { workspace = true }
hermes-relayer-runtime              = { workspace = true }
hermes-relayer-components           = { workspace = true }
hermes-test-components              = { workspace = true }
hermes-cosmos-test-components       = { workspace = true }
tendermint                          = { workspace = true }