[package]
name = "hermes-celestia-test-components"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
description = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
cgp                           = { workspace = true }
hermes-runtime-components     = { workspace = true }
hermes-chain-type-components  = { workspace = true }
hermes-relayer-components     = { workspace = true }
hermes-core                   = { workspace = true }
hermes-test-components        = { workspace = true }
hermes-cosmos-test-components = { workspace = true }

ibc = { workspace = true }

tokio = { workspace = true }
toml  = { workspace = true }
