[package]
name = "hermes-chain-components"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
description = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
cgp                          = { workspace = true, features = [ "full" ] }
hermes-runtime-components    = { workspace = true }
hermes-encoding-components   = { workspace = true }
hermes-chain-type-components = { workspace = true }
