[package]
name = "hermes-cli-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
hermes-error                            = { workspace = true }
hermes-runtime-components               = { workspace = true }
hermes-relayer-components               = { workspace = true }
hermes-encoding-components              = { workspace = true }
hermes-logging-components               = { workspace = true }
hermes-test-components                  = { workspace = true }

cgp                 = { workspace = true }
http                = { workspace = true }
ibc                 = { workspace = true }
serde               = { workspace = true, features = ["derive"] }
toml                = { workspace = true }
clap                = { workspace = true, features = ["derive"] }
