[package]
name = "hermes-cli-components"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
description = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
hermes-core = { workspace = true }

cgp            = { workspace = true }
hermes-prelude = { workspace = true }
http           = { workspace = true }
ibc            = { workspace = true }
serde          = { workspace = true, features = [ "derive" ] }
toml           = { workspace = true }
humantime      = { workspace = true }
clap           = { workspace = true, features = [ "derive" ] }
