[package]
name = "hermes-cli"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Hermes: IBC Relayer in Rust
"""

[[bin]]
name = "hermes"
path = "bin/hermes.rs"

[dependencies]
hermes-cli-framework            = { workspace = true }
hermes-relayer-runtime          = { workspace = true }
hermes-relayer-components       = { workspace = true }
hermes-cosmos-relayer           = { workspace = true }
hermes-cosmos-client-components = { workspace = true }

cgp-core                  = { workspace = true }
ibc-relayer               = { workspace = true }
ibc-relayer-types         = { workspace = true }

clap                      = { workspace = true, features = ["derive"] }
oneline-eyre              = { workspace = true }
humantime                 = { workspace = true }
tracing                   = { workspace = true }
serde_json                = { workspace = true }
serde = { version = "1.0.196", features = ["derive"] }
