[package]
name = "hermes-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
description = """
    Hermes: IBC Relayer in Rust
"""

[[bin]]
name = "hermes"
path = "bin/hermes.rs"

[dependencies]
cgp                     = { workspace = true }
hermes-prelude          = { workspace = true }
hermes-any-counterparty = { workspace = true }
hermes-cli-components   = { workspace = true }
hermes-cli-framework    = { workspace = true }
hermes-core             = { workspace = true }
hermes-cosmos-core      = { workspace = true }

clap       = { workspace = true, features = [ "derive" ] }
dirs-next  = { workspace = true }
eyre       = { workspace = true }
toml       = { workspace = true }
hdpath     = { workspace = true }
http       = { workspace = true }
humantime  = { workspace = true }
prost      = { workspace = true }
tracing    = { workspace = true }
tonic      = { workspace = true }
serde_json = { workspace = true }
futures    = { workspace = true }
serde      = { workspace = true, features = [ "derive" ] }
