[package]
name         = "hermes-cosmos-chain-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
cgp-core                                = { workspace = true }
hermes-runtime                          = { workspace = true }
hermes-relayer-components               = { workspace = true }
hermes-relayer-components-extra         = { workspace = true }
hermes-encoding-components              = { workspace = true }
hermes-protobuf-encoding-components     = { workspace = true }

ibc-proto                               = { workspace = true }
ibc-relayer                             = { workspace = true }
ibc-relayer-types                       = { workspace = true }
tendermint                              = { workspace = true, features = ["secp256k1"] }
tendermint-proto                        = { workspace = true }
tendermint-rpc                          = { workspace = true, features = ["http-client", "websocket-client"] }

prost           = { workspace = true }
prost-types     = { workspace = true }
eyre            = { workspace = true }
tokio           = { workspace = true }
itertools       = { workspace = true }
futures         = { workspace = true }
tracing         = { workspace = true }
http            = { workspace = true }
bech32          = { workspace = true }
serde_json      = { workspace = true }
tonic           = { workspace = true, features = ["tls", "tls-roots"] }
