[package]
name         = "hermes-cosmos-chain-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
cgp                                     = { workspace = true }
hermes-error                            = { workspace = true }
hermes-relayer-components               = { workspace = true }
hermes-relayer-components-extra         = { workspace = true }
hermes-chain-type-components            = { workspace = true }
hermes-encoding-components              = { workspace = true }
hermes-protobuf-encoding-components     = { workspace = true }
hermes-cosmos-encoding-components       = { workspace = true }
hermes-comet-light-client-components    = { workspace = true }
hermes-comet-light-client-context       = { workspace = true }

ibc                                     = { workspace = true }
ibc-proto                               = { workspace = true }
ibc-client-tendermint                   = { workspace = true }
ibc-relayer                             = { workspace = true }
tendermint                              = { workspace = true, features = ["secp256k1"] }
tendermint-proto                        = { workspace = true }
tendermint-light-client                 = { workspace = true }
tendermint-light-client-verifier        = { workspace = true }
tendermint-rpc                          = { workspace = true, features = ["http-client", "websocket-client"] }

ics23           = { workspace = true }
prost           = { workspace = true }
prost-types     = { workspace = true }
eyre            = { workspace = true }
tokio           = { workspace = true }
itertools       = { workspace = true }
futures         = { workspace = true }
tracing         = { workspace = true }
http            = { workspace = true }
bech32          = { workspace = true }
reqwest         = { workspace = true }
time            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tonic           = { workspace = true, features = ["tls", "tls-roots"] }

subtle-encoding     = { workspace = true }
